--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
 name = "comfyui-advanced-controlnet"
 description = "Nodes for scheduling ControlNet strength across timesteps and batched latents, as well as applying custom weights and attention masks."
-version = "1.1.4"
-license = "LICENSE"
+version = "1.1.5"
+license = { file = "LICENSE" }
 dependencies = []
 
 [project.urls]
