--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "comfyui-advanced-controlnet"
 description = "Nodes for scheduling ControlNet strength across timesteps and batched latents, as well as applying custom weights and attention masks."
 version = "1.5.3"
 license = { file = "LICENSE" }
-dependencies = []
+dependencies = ["comfyui-frontend-package @ git+https://github.com/AppMana/appmana-comfyui-frontend.git#796787ffb4603e182415dbc9632160741fa29f94&subdirectory=comfyui_frontend_package"]
 
 [project.urls]
 Repository = "https://github.com/Kosinkadink/ComfyUI-Advanced-ControlNet"
